# epic-code-gen

./: .gitignore  CLAUDE.md  Dockerfile.ci  Makefile  README.md  package-lock.json  package.json  phase1-explanation.md  phase2-explanation.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  design-spec-generator.md  intent-reviewer.md  interaction-verifier.md  iteration-reviewer.md  lint-reviewer.md  tests-reviewer.md  (+2 more)
agents/: architecture-reviewer.md  intent-reviewer.md  lint-reviewer.md  plan-generator.md  review-fix-agent.md  sanity-check-agent.md  spec-reviewer.md  tests-reviewer.md  wiring-verifier.md
ci-scripts/: run-claude.sh  stream-claude.py
config/: repo_mapping.json  repo_resolve_prompt.md  review_config.json
rubrics/: architecture-review.md  intent-review.md  lint-review.md  patterns-review.md  tests-review.md
scripts/: artifact_utils.py  clone_target.py  create_pr.py  fetch_epic.py  fetch_jira_epics.py  frontmatter.py  github_utils.py  jira_utils.py  parse_prototype.js  pipeline_story.py  pr_lifecycle.py  push_to_fork.py  repo_readiness.py  review_cycle.py  review_response.py  run_index.py  run_pipeline.py  score_reviews.py  validate_target.py
tests/: test_artifact_utils.py  test_ci_mode.py  test_clone_target.py  test_create_pr.py  test_fetch_epic.py  test_fetch_jira_epics.py  test_github_utils.py  test_pr_lifecycle.py  test_push_to_fork.py  test_repo_readiness.py  test_review_cycle.py  test_review_response.py  test_run_index.py  test_run_pipeline.py  test_score_reviews.py  test_validate_target.py
(+1 files in other folders)
